# starpoint-sdk

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  test_bench.py
.github/workflows/: publish_python.yml  publish_typescript.yml  publish_typescript_openai.yml  test_python.yaml  test_python.yml  test_typescript.yml  test_typescript_openai.yml
python/: README.md  dev-requirements.txt  pydoc-markdown.yml  pyproject.toml  requirements.txt
python/pointlab/: db.py
python/starpoint/: _utils.py  db.py  embedding.py  enums.py  openai.py  pandas.py  reader.py  writer.py
python/starport/: db.py
python/tests/: test__utils.py  test_db.py  test_embedding.py  test_openai.py  test_pandas.py  test_reader.py  test_writer.py
python/wayfarer/: wayfarer.py
starpoint/: README.md  db.py  embedding.py  pandas.py  pyproject.toml  reader.py  writer.py
starpoint/starpoint/: _utils.py  db.py  openai.py  pandas.py
starpoint/tests/: test_db.py  test_openai.py  test_writer.py
starpoint_openai/: pyproject.toml
starpoint_openai/starpoint_openai/: starpoint_openai.py
starpoint_openai/tests/: test_openai.py
starpoint_pandas/: pyproject.toml
starpoint_pandas/tests/: test_pandas.py
tests/: test_embedding.py  test_openai.py  test_writer.py
typescript/: .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json  vite.config.ts
typescript-openai/: package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript-openai/src/: constants.ts  index.ts  initialize.ts  types.ts  utility.ts  validators.ts
typescript-openai/src/embeddings/: index.ts
typescript-openai/tests/: openai.test.ts
typescript/src/: common-types.ts  constants.ts  index.ts  initialize.ts  utility.ts  validators.ts
typescript/src/embedding/: index.ts  types.ts  validators.ts
typescript/src/manager/: index.ts  types.ts  writer.ts
typescript/src/open-ai/: index.ts  types.ts  utility.ts
typescript/src/reader/: index.ts  types.ts
typescript/src/writer/: index.ts  types.ts  writer.ts
typescript/tests/: db.test.ts
