[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starpoint-ai"
version = "0.0.6"
authors = [
  { name="starpoint.ai", email="support@starpoint.ai"},
]
description = "SDK for Starpoint DB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "validators~=0.20",
    "requests~=2.28",
]

[project.urls]
"Homepage" = "https://github.com/starpoint-ai/wayfarer"
"Bug Tracker" = "https://github.com/starpoint-ai/wayfarer/issues"
