[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starpoint"
version = "0.0.1"
authors = [
  { name="pointable", email="support@pointable.ai"},
]
description = "SDK for Starpoint DB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "validators~=0.20",
    "requests~=2.28",
]

[project.urls]
"Homepage" = "https://github.com/starpoint-ai/sdk"
"Bug Tracker" = "https://github.com/starpoint-ai/sdk/issues"
