[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starpoint"
version = "0.1.2"
authors = [{ name = "pointable", email = "package-maintainers@pointable.ai" }]
description = "SDK for Starpoint DB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai~=0.27",
  "requests~=2.28",
  "validators~=0.20",
]

[project.optional-dependencies]
dev = [
  "pip-tools~=6.14",
  "pre-commit~=3.3",
  "pytest-cov~=4.1",
  "pytest~=7.3",
]

[project.urls]
"Homepage" = "https://github.com/starpoint-ai/sdk"
"Bug Tracker" = "https://github.com/starpoint-ai/sdk/issues"
