[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starpoint-pandas"
version = "0.1.0"
authors = [{ name = "pointable", email = "package-maintainers@pointable.ai" }]
description = "Pandas Client for Starpoint DB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas~=2.0",
  "starpoint-sdk==0.4.2",
]

[project.optional-dependencies]
dev = ["pip-tools~=6.14", "pre-commit~=3.3", "pytest-cov~=4.1", "pytest~=7.3"]

[project.urls]
"Homepage" = "https://github.com/starpoint-pandas/sdk"
"Bug Tracker" = "https://github.com/starpoint-pandas/sdk/issues"
